    CheckSystem.Doc
  * stop creating /etc/keys in postinst maintainer script.
  * update build system to include library files again: (closes: #480157)
    - split into three packages: cryptsetup, libcryptsetup1, libcryptsetup-dev
    - rename preinst to cryptsetup.preinst, copy code to create /etc/crypttab
      skeleton into cryptsetup-udeb.preinst.

 -- Jonas Meurer <mejo@debian.org>  Tue, 29 Sep 2009 23:09:37 +0200

cryptsetup (2:1.0.7-2) unstable; urgency=low

  * add a paragraph to the cryptsetup manpage that mentions /proc/crypto as
    source for available crypto ciphers, modes, hashs, keysizes, etc.
    (closes: #518266)
  * fix luksformat to check for mkfs.$fs both in /sbin and /usr/sbin. thanks
    to Jon Dowland. (closes: #539734)
  * mention era eriksson as author of the typo fixes for manpage (submitted as
    bug #476624) in changelog of cryptsetup 2:1.0.6-3. (closes: #541344)
  * bump standards-version to 3.8.3. no changes needed.
  * add 04_no_stderr_success.patch, which adds an option to suppress success
    messages to stderr. don't apply the patch as this already has been fixed
    upstream in another way. next cryptsetup release will print the command
    successfull message to stdout only if opt_verbose is set.
  * add checkscripts blkid and un_blkid for the reason that vol_id will be
    removed from udev soon. advertise the new scripts at all places that
    mentioned vol_id or un_vol_id before.
  * add /usr/share/bug/cryptsetup which adds /proc/cmdline, /etc/crypttab,
    /etc/fstab and output of 'lsmod' to bugs against cryptsetup.
  * add debian/README.remote, which describes how to setup a cryptroot system
    with support for remote unlocking via ssh login into the initramfs. Thanks
    to debian@x.ray.net for writing it down.
  * update debian/copyright for current format from dep.debian.net/deps/dep5
  * add chainiv, cryptomgr and krng to standard list of modules in initramfs
    cryptroot hook. (closes: #541835)